add cuda-nvtx-dev to meta.yaml

--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -62,6 +62,7 @@ outputs:
         - cuda-nvml-dev {{ cuda_compiler_version }}.*
         - cuda-nvrtc-dev {{ cuda_compiler_version }}.*
         - cuda-version {{ cuda_compiler_version }}.*
+        - cuda-nvtx-dev {{ cuda_compiler_version }}.*
         - cudf {{ rapids_version }}
         - cython =3.0
         - libcudf {{ rapids_version }}
