--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -61,8 +61,9 @@ outputs:
         - cuda-cudart-dev {{ cuda_compiler_version }}.*
         - cuda-nvml-dev {{ cuda_compiler_version }}.*
         - cuda-nvrtc-dev {{ cuda_compiler_version }}.*
-        - cuda-version {{ cuda_compiler_version }}.*
         - cuda-nvtx-dev {{ cuda_compiler_version }}.*
+        - cuda-version {{ cuda_compiler_version }}.*
+        - cuda-libraries-dev {{ cuda_compiler_version }}.* # required by matx for libcublas-dev
         - cudf {{ rapids_version }}
         - cython =3.0
         - libcudf {{ rapids_version }}
