add networkx to runtime dependencies

--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -62,6 +62,7 @@ dependencies:
 - mrc=24.03
 - myst-parser=0.18.1
 - nbsphinx
+- networkx=2.8.8
 - newspaper3k=0.2
 - ninja=1.11
 - nlohmann_json=3.9
