--- a/conda/environments/examples_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/examples_cuda-121_arch-x86_64.yaml
@@ -30,6 +30,7 @@ dependencies:
 - langchain=0.0.190
 - libwebp=1.3.2
 - mlflow=2.9.2
+- networkx=2.8.8
 - newspaper3k=0.2
 - nodejs=18.*
 - numpydoc=1.5
