--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -36,7 +36,6 @@ files:
       - docs
       - cudatoolkit
       - python
-      - runtime
       - checks
       - cve-mitigation
       - doca
@@ -56,7 +55,6 @@ files:
       - docs
       - cudatoolkit
       - python
-      - runtime
       - checks
 
   examples:
@@ -265,6 +263,7 @@ dependencies:
           - feedparser=6.0.10
           - grpcio=1.59
           - mlflow=2.9.2
+          - networkx=2.8.8
           - nvtabular=23.08.00
           - python-confluent-kafka>=1.9.2,<1.10.0a0
           - python-graphviz
