add zlib to dependencies

--- a/conda/environments/dev_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-121_arch-x86_64.yaml
@@ -44,6 +44,7 @@ dependencies:
 - ipython
 - isort
 - librdkafka>=1.9.2,<1.10.0a0
+- libzlib=1.2.13
 - mlflow=2.9.2
 - mrc=24.03
 - myst-parser=0.18.1
