--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -59,15 +59,16 @@ outputs:
         - sysroot_linux-64 =2.17
       host:
         - cuda-cudart-dev {{ cuda_compiler_version }}.*
+        - cuda-libraries-dev {{ cuda_compiler_version }}.* # required by matx for libcublas-dev
         - cuda-nvml-dev {{ cuda_compiler_version }}.*
         - cuda-nvrtc-dev {{ cuda_compiler_version }}.*
         - cuda-nvtx-dev {{ cuda_compiler_version }}.*
         - cuda-version {{ cuda_compiler_version }}.*
-        - cuda-libraries-dev {{ cuda_compiler_version }}.* # required by matx for libcublas-dev
         - cudf {{ rapids_version }}
         - cython =3.0
         - libcudf {{ rapids_version }}
         - librdkafka >=1.9.2,<1.10.0a0
+        - libzlib # required to build triton client
         - mrc {{ minor_version }}
         - pip
         - pybind11-stubgen =0.10.5
