--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -58,6 +58,7 @@ dependencies:
 - librdkafka>=1.9.2,<1.10.0a0
 - libtool
 - libwebp=1.3.2
+- libzlib=1.2.13
 - mlflow=2.9.2
 - mrc=24.03
 - myst-parser=0.18.1
