--- a/ci/runner/Dockerfile
+++ b/ci/runner/Dockerfile
@@ -16,14 +16,15 @@
 # limitations under the License.
 
 # Args used in FROM commands must come first
-ARG FROM_IMAGE="rapidsai/ci"
-ARG CUDA_PKG_VER=11-8
-ARG CUDA_SHORT_VER=11.8
-ARG CUDA_VER=11.8.0
+ARG FROM_IMAGE="rapidsai/ci-conda"
+ARG CUDA_PKG_VER=12-0
+ARG CUDA_SHORT_VER=12.1
+ARG CUDA_VER=12.1.1
 ARG LINUX_DISTRO=ubuntu
-ARG LINUX_VER=20.04
+ARG LINUX_VER=22.04
 ARG PROJ_NAME=morpheus
 ARG PYTHON_VER=3.10
+ARG ARCH=x86_64
 
 # Configure the base docker img
 FROM ${FROM_IMAGE}:cuda${CUDA_VER}-${LINUX_DISTRO}${LINUX_VER}-py${PYTHON_VER} AS base
@@ -34,27 +35,36 @@ ARG CUDA_SHORT_VER
 SHELL ["/bin/bash",  "-c"]
 
 # Create conda environment
-COPY ./docker/conda/environments/* /tmp/conda/
-
-RUN CONDA_ALWAYS_YES=true /opt/conda/bin/mamba env create -n ${PROJ_NAME} -q --file /tmp/conda/cuda${CUDA_SHORT_VER}_dev.yml && \
-    /opt/conda/bin/mamba install -n morpheus -c conda-forge "conda-merge>=0.2" && \
-    sed -i "s/conda activate base/conda activate ${PROJ_NAME}/g" ~/.bashrc && \
-    conda clean -afy && \
-    rm -rf /tmp/conda
+COPY ./dependencies.yaml /tmp/conda/
 
 
 # ============ build ==================
 FROM base as build
 
-# Add any build only dependencies here.
+# Add any build only dependencies here.ARG ARCH
+ARG CUDA_SHORT_VER
+ARG PROJ_NAME
+ARG PYTHON_VER
+
+RUN rapids-dependency-file-generator \
+      --config /tmp/conda/dependencies.yaml \
+      --output conda \
+      --file_key build \
+      --matrix "cuda=${CUDA_SHORT_VER};arch=${ARCH};py=${PYTHON_VER}" > /tmp/conda/env.yaml && \
+    CONDA_ALWAYS_YES=true /opt/conda/bin/conda env create -n ${PROJ_NAME} -q --file /tmp/conda/env.yaml && \
+    sed -i "s/conda activate base/conda activate ${PROJ_NAME}/g" ~/.bashrc && \
+    conda clean -afy && \
+    rm -rf /tmp/conda
 
 # ============ test ==================
 FROM base as test
 
 # Add any test only dependencies here.
 
-ARG PROJ_NAME
+ARG ARCH
 ARG CUDA_SHORT_VER
+ARG PROJ_NAME
+ARG PYTHON_VER
 
 RUN apt update && \
     DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC \
@@ -63,7 +73,16 @@ RUN apt update && \
     apt clean && \
     rm -rf /var/lib/apt/lists/*
 
-COPY ./docker/conda/environments/cuda${CUDA_SHORT_VER}_examples.yml /tmp/conda/cuda${CUDA_SHORT_VER}_examples.yml
+RUN rapids-dependency-file-generator \
+      --config /tmp/conda/dependencies.yaml \
+      --output conda \
+      --file_key test \
+      --matrix "cuda=${CUDA_SHORT_VER};arch=${ARCH};py=${PYTHON_VER}" > /tmp/conda/env.yaml && \
+    CONDA_ALWAYS_YES=true /opt/conda/bin/conda env create -n ${PROJ_NAME} -q --file /tmp/conda/env.yaml && \
+    sed -i "s/conda activate base/conda activate ${PROJ_NAME}/g" ~/.bashrc && \
+    conda clean -afy && \
+    rm -rf /tmp/conda
+
 COPY ./ci/scripts/download_kafka.py /tmp/scripts/download_kafka.py
 
 # Install camouflage needed for unittests to mock a triton server
