--- a/examples/developer_guide/4_rabbitmq_cpp_stage/CMakeLists.txt
+++ b/examples/developer_guide/4_rabbitmq_cpp_stage/CMakeLists.txt
@@ -13,9 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-list(APPEND CMAKE_MESSAGE_CONTEXT "4_rabbitmq_cpp_stage")
+cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
 
-cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
+list(APPEND CMAKE_MESSAGE_CONTEXT "4_rabbitmq_cpp_stage")
 
 # Set the cache to be the same to allow for CCache to be used effectively
 set(MORPHEUS_CACHE_DIR "${CMAKE_SOURCE_DIR}/.cache" CACHE PATH "Directory to contain all CPM and CCache data")
@@ -31,6 +31,8 @@ project(4_rabbitmq_cpp_stage
 )
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
