update mamba env update to use conda and libmamba

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -182,7 +182,7 @@ COPY ${MORPHEUS_ROOT_HOST}/conda/environments/dev_cuda-${CUDA_MAJOR_VER}${CUDA_M
 RUN --mount=type=cache,id=conda_pkgs,target=/opt/conda/pkgs,sharing=locked \
     # Temp add channel_alias to get around conda 404 errors
     conda config --env --set channel_alias ${CONDA_CHANNEL_ALIAS} &&\
-    /opt/conda/bin/mamba env update -n morpheus --file conda/environments/dev.yaml &&\
+    /opt/conda/bin/conda env update --solver=libmamba -n morpheus --file conda/environments/dev.yaml &&\
     # Remove channel_alias to use the normal channel in the container
     conda config --env --remove-key channel_alias
 
