--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -291,8 +291,10 @@ dependencies:
           - pytest-asyncio
           - pytest-benchmark=4.0
           - pytest-cov
+          - python-docx==1.1.0
           - pip
           - pip:
+              - PyMuPDF==1.23.21
               - pytest-kafka==0.6.0
 
   example-dfp-prod:
