Add runtime environment output to fix building the release container (#1496)
Fixes the release container build.

## By Submitting this PR I confirm:
- I am familiar with the [Contributing Guidelines](https://github.com/nv-morpheus/Morpheus/blob/main/docs/source/developer_guide/contributing.md).
- When the PR is ready for review, new or existing tests cover these changes.
- When the PR is ready for review, the documentation is up to date with these changes.

Authors:
  - Christopher Harris (https://github.com/cwharris)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/1496

--- a/conda/environments/dev_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-121_arch-x86_64.yaml
@@ -66,6 +66,7 @@ dependencies:
 - pytest-cov
 - pytest=7.4.4
 - python-confluent-kafka>=1.9.2,<1.10.0a0
+- python-docx==1.1.0
 - python-graphviz
 - python=3.10
 - pytorch-cuda
@@ -88,6 +89,7 @@ dependencies:
 - yapf=0.40.1
 - zlib=1.2.13
 - pip:
+  - PyMuPDF==1.23.21
   - databricks-connect
   - milvus==2.3.5
   - pymilvus==2.3.6
