--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -85,6 +85,7 @@ dependencies:
 - pytest-cov
 - pytest=7.4.4
 - python-confluent-kafka>=1.9.2,<1.10.0a0
+- python-docx==1.1.0
 - python-graphviz
 - python=3.10
 - pytorch-cuda
@@ -113,6 +114,7 @@ dependencies:
 - pip:
   - --find-links https://data.dgl.ai/wheels-test/repo.html
   - --find-links https://data.dgl.ai/wheels/cu121/repo.html
+  - PyMuPDF==1.23.21
   - databricks-connect
   - dgl
   - dglgo
