--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,9 @@ filterwarnings = [
 
   # Deprecation warning from any project using distutils, currently known sources of this are:
   # GPUtils https://github.com/anderskm/gputil/issues/48
-  # PySpark https://issues.apache.org/jira/browse/SPARK-45390
+  # PySpark https://issues.apache.org/jira/browse/SPARK-45390 & https://issues.apache.org/jira/browse/SPARK-38660
   'ignore:The distutils package is deprecated and slated for removal in Python 3.12. Use setuptools or check PEP 632 for potential alternatives',
+  'ignore:distutils Version classes are deprecated. Use packaging.version instead.',
 
   # Ignore cudf warnings about Pandas being used under the hood for processing json
   'ignore:Using CPU via Pandas to write JSON dataset',
