--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,8 @@ markers = [
 ]
 
 filterwarnings = [
-  # Warning coming from mlflow's usage of numpy
-  'ignore:`np.object` is a deprecated alias for the builtin `object`. To silence this warning, use `object` by itself. Doing this will not modify any behavior and is safe',
+  # Ignore our own warning about the df property since we still have to test it
   'ignore:Warning the df property returns a copy, please use the copy_dataframe method or the mutable_dataframe context manager to modify the DataFrame in-place instead.',
-  'ignore:`np.MachAr` is deprecated \(NumPy 1.22\):DeprecationWarning',
-  'ignore:Please use `spmatrix` from the `scipy.sparse` namespace, the `scipy.sparse.base` namespace is deprecated:DeprecationWarning',
 
   # Deprecation warning from any project using distutils, currently known sources of this are:
   # GPUtils https://github.com/anderskm/gputil/issues/48
