Grafana log monitoring and error alerting example (#1463)
+ Add Loki service to production DFP docker-compose
+ Add Loki data source to Grafana
+ Add `DFP Logs` dashboard to Grafana
+ Pipeline run script that uses Loki logging handler
+ Update README for Grafana DFP Example
+ Add instructions for setting up error alerting in Grafana
+ Update Morpheus logger to accept additional handlers so that we can add the Loki handler.

Closes #1336

## By Submitting this PR I confirm:
- I am familiar with the [Contributing Guidelines](https://github.com/nv-morpheus/Morpheus/blob/main/docs/source/developer_guide/contributing.md).
- When the PR is ready for review, new or existing tests cover these changes.
- When the PR is ready for review, the documentation is up to date with these changes.

Authors:
  - Eli Fajardo (https://github.com/efajardo-nv)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/1463

--- a/examples/digital_fingerprinting/production/docker-compose.yml
+++ b/examples/digital_fingerprinting/production/docker-compose.yml
@@ -145,9 +145,26 @@ services:
       - ./grafana/config/dashboards.yaml:/etc/grafana/provisioning/dashboards/dashboards.yaml
       - ./grafana/dashboards/:/var/lib/grafana/dashboards/
       - ./grafana/datasources/:/etc/grafana/provisioning/datasources/
-      - ./morpheus:/workspace
+      - ./grafana:/workspace
     ports:
       - "3000:3000"
+    networks:
+      - frontend
+      - backend
+    depends_on:
+      - loki
+
+  loki:
+    image: grafana/loki:2.9.3
+    volumes:
+      - ./grafana/config/loki-config.yml:/etc/loki/loki-config.yml
+    ports:
+      - "3100:3100"
+    networks:
+      - frontend
+      - backend
+    restart: unless-stopped
+    command: -config.file=/etc/loki/loki-config.yml
 
 networks:
   frontend:
