--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -54,7 +54,6 @@ dependencies:
 - isort
 - jsonpatch>=1.33
 - kfp
-- langchain=0.0.190
 - librdkafka>=1.9.2,<1.10.0a0
 - libtool
 - libwebp=1.3.2
@@ -119,6 +118,7 @@ dependencies:
   - dgl
   - dglgo
   - google-search-results==2.4
+  - langchain==0.0.310
   - milvus==2.3.5
   - nemollm
   - pymilvus==2.3.6
