--- a/conda/environments/examples_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/examples_cuda-121_arch-x86_64.yaml
@@ -27,7 +27,6 @@ dependencies:
 - huggingface_hub=0.20.2
 - jsonpatch>=1.33
 - kfp
-- langchain=0.0.190
 - libwebp=1.3.2
 - mlflow=2.9.2
 - networkx=2.8.8
@@ -63,6 +62,7 @@ dependencies:
   - dgl
   - dglgo
   - google-search-results==2.4
+  - langchain==0.0.310
   - milvus==2.3.5
   - nemollm
   - pymilvus==2.3.6
