--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -78,6 +78,7 @@ dependencies:
 - pre-commit
 - protobuf=4.24
 - pybind11-stubgen=0.10.5
+- pydantic
 - pylint=3.0.3
 - pypdf=3.17.4
 - pytest-asyncio
