--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -54,7 +54,6 @@ dependencies:
 - isort
 - jsonpatch>=1.33
 - kfp
-- langchain=0.0.190
 - librdkafka>=1.9.2,<1.10.0a0
 - libtool
 - libwebp=1.3.2
@@ -67,10 +66,11 @@ dependencies:
 - ninja=1.11
 - nlohmann_json=3.9
 - nodejs=18.*
+- numexpr
 - numpydoc=1.5
 - nvtabular=23.08.00
 - onnx
-- openai=0.28
+- openai=1.13
 - papermill=2.4.0
 - pip
 - pkg-config=0.29
@@ -119,6 +119,7 @@ dependencies:
   - dgl
   - dglgo
   - google-search-results==2.4
+  - langchain==0.1.9
   - milvus==2.3.5
   - nemollm
   - pymilvus==2.3.6
