Adding missing dependency on `pydantic` (#1535)
Adding missing dependency on pydantic

## By Submitting this PR I confirm:
- I am familiar with the [Contributing Guidelines](https://github.com/nv-morpheus/Morpheus/blob/main/docs/source/developer_guide/contributing.md).
- When the PR is ready for review, new or existing tests cover these changes.
- When the PR is ready for review, the documentation is up to date with these changes.

Authors:
  - https://github.com/yuchenz427

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/1535

--- a/conda/environments/examples_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/examples_cuda-121_arch-x86_64.yaml
@@ -39,6 +39,7 @@ dependencies:
 - openai=1.13
 - papermill=2.4.0
 - pip
+- pydantic
 - pypdf=3.17.4
 - python-confluent-kafka>=1.9.2,<1.10.0a0
 - python-graphviz
