--- a/examples/llm/docker-compose.yml
+++ b/examples/llm/docker-compose.yml
@@ -14,6 +14,8 @@
 # limitations under the License.
 version: '3.3'
 
+name: cyber-dev-day
+
 services:
 
   # Run `docker compose build morpheus` to help build the base Morpheus container
@@ -80,7 +82,7 @@ services:
     image: nginx:1.23.4
     container_name: cache-proxy
     ports:
-      - 127.0.0.1:81:80
+      - 127.0.0.1:81:81
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - proxy-cache:/server_cache:rw
