--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -93,7 +93,9 @@ dependencies:
 - pytorch=*=*cuda*
 - rapidjson=1.1.0
 - rdma-core>=48
+- requests
 - requests-cache=1.1
+- requests-toolbelt
 - s3fs=2023.12.2
 - scikit-build=0.17.6
 - scikit-learn=1.3.2
