--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -313,7 +313,7 @@ dependencies:
           - pip:
             - --find-links https://data.dgl.ai/wheels/cu121/repo.html
             - --find-links https://data.dgl.ai/wheels-test/repo.html
-            - dgl
+            - dgl==2.0.0
             - dglgo
 
   example-llm-agents:
