--- a/examples/cyber_dev_day/docker-compose.yml
+++ b/examples/cyber_dev_day/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       target: jupyter
     image: morpheus-cyber-dev-day
     ports:
-      - "26303:26302"
+      - "26302"
       - "8888:8888"
     working_dir: /workspace/examples/cyber_dev_day
     command: jupyter-lab --no-browser --allow-root --ip='*'
@@ -65,29 +65,35 @@ services:
       - .env
     environment:
       - TERM=${TERM:-}
+      - NGC_API_KEY=CYBER_DEV_DAY
+      - NGC_ORG_ID=CYBER_DEV_DAY
+      - NVIDIA_API_KEY=CYBER_DEV_DAY
       # Overwrite any environment variables in the .env file with URLs needed in the network
-      - NGC_API_BASE=http://cache-proxy:81/nemo/v1
-      - NVIDIA_API_BASE=http://cache-proxy:81/nvcf/v2
-      - OPENAI_API_BASE=http://cache-proxy:81/openai/v1
-      - OPENAI_BASE_URL=http://cache-proxy:81/openai/v1
+      - NGC_API_BASE=https://morpheus-sherlock.nvidia.com/nemo/v1
+      - NVIDIA_API_BASE=https://morpheus-sherlock.nvidia.com/nvcf/v2
+      - OPENAI_API_BASE=https://morpheus-sherlock.nvidia.com/openai/v1
+      - OPENAI_BASE_URL=https://morpheus-sherlock.nvidia.com/openai/v1
     volumes:
       - ../..:/workspace
       - build-cache:/workspace/.cache
       - build-dir:/workspace/build-docker
     cap_add:
       - sys_nice
-    depends_on:
-      - cache-proxy
+    # depends_on:
+    #   - nginx-proxy-cache
     restart: always
 
-  cache-proxy:
+  nginx-proxy-cache:
     image: nginx:1.23.4
-    container_name: cache-proxy
+    container_name: nginx-proxy-cache
     ports:
       - 127.0.0.1:81:81
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/template-variables.conf:/etc/nginx/templates/10-variables.conf.template:ro
       - proxy-cache:/server_cache:rw
+    env_file:
+      - .env
     networks:
       - proxy
 
