--- a/examples/cyber_dev_day/nginx/nginx.conf
+++ b/examples/cyber_dev_day/nginx/nginx.conf
@@ -9,6 +9,11 @@ http {
 
     error_log /dev/stdout info;
 
+    log_format upstream_time '$remote_addr - $remote_user [$time_local] '
+                            '"$request" $status $body_bytes_sent '
+                            '"$http_referer" "$http_user_agent"'
+                            'rt=$request_time uct="$upstream_connect_time" uht="$upstream_header_time" urt="$upstream_response_time"';
+
     log_format cache_log '$remote_addr - $remote_user [$time_local] '
                         '"$request" $status $body_bytes_sent '
                         '"$http_referer" "$http_user_agent" '
@@ -19,8 +24,25 @@ http {
                             '"$http_referer" "$http_user_agent" '
                             'Cache: $upstream_cache_status';
 
+    include /etc/nginx/conf.d/10-variables.conf;
+
+    # upstream loadbalancer {
+
+    #     # enable sticky session based on IP
+    #     ip_hash;
+    #     keepalive 1024;
+
+    #     server cve-tool:26302;
+    # }
+
     server {
-        listen 81;
+        listen                  81;
+        # listen                  443 ssl;
+        # listen                  [::]:443 ssl;
+        # server_name             localhost;
+        # ssl_certificate         /etc/nginx/ssl/cert.pem;
+        # ssl_certificate_key     /etc/nginx/ssl/key.pem;
+
         proxy_http_version 1.1;
         proxy_set_header Host $host;
 
@@ -29,6 +51,14 @@ http {
         proxy_buffer_size   256k;
 
         # rewrite_log on;
+
+        # location / {
+        #     proxy_pass "http://loadbalancer";
+        #     proxy_http_version 1.1;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection "upgrade";
+        #     proxy_set_header Host $host;
+        # }
 
         location /openai {
             proxy_set_header Host api.openai.com;
@@ -64,12 +94,14 @@ http {
         location /nemo {
             proxy_set_header Host api.llm.ngc.nvidia.com;
 
-            location ~* ^\/nemo\/v1\/((models\/.+\/)?(?:completions))$ {
+            location ~* ^\/nemo\/v1\/models(\/.+\/completions)?$ {
                 rewrite ^\/nemo(\/.*)$ $1 break;
                 proxy_pass https://api.llm.ngc.nvidia.com;
                 proxy_set_header Connection '';
+                proxy_set_header Authorization $nemo_http_authorization;
+                proxy_set_header Organization-ID $nemo_http_organization_id;
                 proxy_cache my_cache;
-                proxy_cache_methods POST;
+                proxy_cache_methods GET POST;
                 proxy_cache_key "$request_method|$request_uri|$request_body";
                 proxy_cache_valid 200 14d;
                 proxy_cache_valid 404 1m;
@@ -99,6 +131,7 @@ http {
                 rewrite ^\/nvcf(\/.*)$ $1 break;
                 proxy_pass https://api.nvcf.nvidia.com;
                 proxy_set_header Connection '';
+                proxy_set_header Authorization $nvcf_http_authorization;
                 proxy_cache my_cache;
                 proxy_cache_methods POST;
                 proxy_cache_key "$request_method|$request_uri|$request_body";
@@ -121,6 +154,7 @@ http {
                 rewrite ^\/nvcf(\/.*)$ $1 break;
                 proxy_pass https://api.nvcf.nvidia.com;
                 proxy_set_header Connection '';
+                proxy_set_header Authorization $nvcf_http_authorization;
                 proxy_cache my_cache;
                 proxy_cache_methods GET;
                 proxy_cache_key "$request_method|$request_uri";
