--- a/examples/cyber_dev_day/default.env
+++ b/examples/cyber_dev_day/default.env
@@ -1,3 +1,5 @@
-NGC_API_KEY="<YOUR_NGC_API_KEY>"
-NGC_ORG_ID="<YOUR_NGC_ORG_ID>"
-NVIDIA_API_KEY="<YOUR_NVIDIA_AI_FOUNDATION_MODELS_API_KEY>"
+NGC_API_KEY="CYBER_DEV_DAY"
+NGC_ORG_ID="CYBER_DEV_DAY"
+NVIDIA_API_KEY="nvapi-CYBER_DEV_DAY"
+NGC_API_BASE="http://morpheuscache.ddns.net/nemo/v1"
+NVIDIA_API_BASE="http://morpheuscache.ddns.net/nvcf/v2"
