--- a/examples/cyber_dev_day/docker-compose.yml
+++ b/examples/cyber_dev_day/docker-compose.yml
@@ -61,10 +61,16 @@ services:
               capabilities: [ gpu ]
     networks:
       - proxy
-    env_file:
-      - .env
+    # Uncomment if the .env file issue is resolved: https://github.com/docker/compose/issues/9181#issuecomment-1996016211
+    # env_file:
+    #   - path: .env
+    #     required: "false"
     environment:
       - TERM=${TERM:-}
+      # Workaround until this is working: https://github.com/docker/compose/issues/9181#issuecomment-1996016211
+      - NGC_API_KEY=${NGC_API_KEY:-CYBER_DEV_DAY}
+      - NGC_ORG_ID=${NGC_ORG_ID:-CYBER_DEV_DAY}
+      - NVIDIA_API_KEY=${NVIDIA_API_KEY:-nvapi-CYBER_DEV_DAY}
       # Overwrite any environment variables in the .env file with URLs needed in the network
       - NGC_API_BASE=http://morpheuscache.ddns.net/nemo/v1
       - NVIDIA_API_BASE=http://morpheuscache.ddns.net/nvcf/v2
@@ -89,7 +95,8 @@ services:
       - ./nginx/template-variables.conf:/etc/nginx/templates/10-variables.conf.template:ro
       - proxy-cache:/server_cache:rw
     env_file:
-      - .env
+      - path: .env
+        required: false
     networks:
       - proxy
 
