--- a/examples/cyber_dev_day/nginx/template-variables.conf
+++ b/examples/cyber_dev_day/nginx/template-variables.conf
@@ -11,4 +11,5 @@ map $http_organization_id $nemo_http_organization_id {
 map $http_authorization $nvcf_http_authorization {
    default $http_authorization;
    "Bearer CYBER_DEV_DAY" "Bearer ${NVIDIA_API_KEY}";
+   "Bearer nvapi-CYBER_DEV_DAY" "Bearer ${NVIDIA_API_KEY}";
 }
