Fix environment yaml paths (#1551)
- Update environment yaml paths to point to `conda/environments` instead of `morpheus/conda/environments`.
- Update `docker/Dockerfile` to copy all yaml files from `conda/environments` to runtime image.
- Fix broken environment yaml path in DFP Dockerfile to use above examples yaml.
- Remove DFP `conda_env.yml` which is out of date and no longer used. DFP dependencies have already been moved to the examples yaml with updated versions.

Closes #1554

## By Submitting this PR I confirm:
- I am familiar with the [Contributing Guidelines](https://github.com/nv-morpheus/Morpheus/blob/main/docs/source/developer_guide/contributing.md).
- When the PR is ready for review, new or existing tests cover these changes.
- When the PR is ready for review, the documentation is up to date with these changes.

Authors:
  - Eli Fajardo (https://github.com/efajardo-nv)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/1551

--- a/examples/digital_fingerprinting/production/Dockerfile
+++ b/examples/digital_fingerprinting/production/Dockerfile
@@ -26,12 +26,9 @@ SHELL ["/bin/bash", "-c"]
 # Set the workdir to the DFP base folder
 WORKDIR /workspace/examples/digital_fingerprinting/
 
-# Copy the conda_env file
-COPY ./conda_env.yml ./
-
 # Install DFP dependencies
 RUN source activate morpheus \
-    && mamba env update -n morpheus --file ../../conda/environments/examples_cuda-121_arch-x86_64.yaml
+    && mamba env update -n morpheus --file /workspace/conda/environments/examples_cuda-121_arch-x86_64.yaml
 
 # Set the tracking URI for mlflow
 ENV MLFLOW_TRACKING_URI="http://mlflow:5000"
