--- a/examples/cyber_dev_day/docker-compose.yml
+++ b/examples/cyber_dev_day/docker-compose.yml
@@ -50,9 +50,9 @@ services:
     image: morpheus-cyber-dev-day
     ports:
       - "26302"
-      - "8888:8888"
+      - "${JUPYTER_PORT:-8888}:${JUPYTER_PORT:-8888}"
     working_dir: /workspace/examples/cyber_dev_day
-    command: jupyter-lab --no-browser --allow-root --ip='*'
+    command: jupyter-lab --no-browser --allow-root --ip='*' --port=${JUPYTER_PORT:-8888}
     deploy:
       resources:
         reservations:
@@ -82,8 +82,6 @@ services:
       - build-dir:/workspace/build-docker
     cap_add:
       - sys_nice
-    depends_on:
-      - proxy-cache
     restart: always
 
   proxy-cache:
@@ -94,9 +92,11 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/template-variables.conf:/etc/nginx/templates/10-variables.conf.template:ro
       - proxy-cache:/server_cache:rw
-    env_file:
-      - path: .env
-        required: false
+    environment:
+      # Workaround until this is working: https://github.com/docker/compose/issues/9181#issuecomment-1996016211
+      - NGC_API_KEY=${NGC_API_KEY:-CYBER_DEV_DAY}
+      - NGC_ORG_ID=${NGC_ORG_ID:-CYBER_DEV_DAY}
+      - NVIDIA_API_KEY=${NVIDIA_API_KEY:-nvapi-CYBER_DEV_DAY}
     networks:
       - proxy
 
