--- a/examples/cyber_dev_day/default.env
+++ b/examples/cyber_dev_day/default.env
@@ -1,5 +1,5 @@
-NGC_API_KEY="CYBER_DEV_DAY"
-NGC_ORG_ID="CYBER_DEV_DAY"
-NVIDIA_API_KEY="nvapi-CYBER_DEV_DAY"
+NGC_API_KEY=CYBER_DEV_DAY
+NGC_ORG_ID=CYBER_DEV_DAY
+NVIDIA_API_KEY=nvapi-CYBER_DEV_DAY
 NGC_API_BASE="http://morpheuscache.ddns.net/nemo/v1"
 NVIDIA_API_BASE="http://morpheuscache.ddns.net/nvcf/v2"
