Getting CI to pass, updating the naming, and debugging failing tests.

--- a/morpheus/_lib/tests/CMakeLists.txt
+++ b/morpheus/_lib/tests/CMakeLists.txt
@@ -44,6 +44,7 @@ set_target_properties(test_cuda
 add_library(
   morpheus_test_utilities
     test_utils/common.cpp
+    test_utils/tensor_utils.cpp
 )
 
 target_link_libraries(
@@ -51,6 +52,12 @@ target_link_libraries(
   PUBLIC
     GTest::gtest
     morpheus
+)
+
+# Ensure that the python executable is defined for the tests
+target_compile_definitions(morpheus_test_utilities
+  PRIVATE
+    PYTHON_EXECUTABLE="${PYTHON_EXECUTABLE}"
 )
 
 # Morpheus Tests
