--- a/conda/environments/dev_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-121_arch-x86_64.yaml
@@ -80,6 +80,7 @@ dependencies:
 - requests-toolbelt
 - scikit-build=0.17.6
 - scikit-learn=1.3.2
+- snappy=1.1.10
 - sphinx
 - sphinx_rtd_theme
 - sqlalchemy
