Pin databricks-cli to work-around #1600

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -273,6 +273,7 @@ dependencies:
           - websockets
           - pip
           - pip:
+            - databricks-cli < 0.100
             - databricks-connect
             - milvus==2.3.5 # update to match pymilvus when available
             - pymilvus==2.3.6
