--- a/conda/environments/dev_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-121_arch-x86_64.yaml
@@ -43,6 +43,7 @@ dependencies:
 - include-what-you-use=0.20
 - ipython
 - isort
+- libarrow
 - librdkafka>=1.9.2,<1.10.0a0
 - libtool
 - mlflow=2.9.2
@@ -96,6 +97,7 @@ dependencies:
 - zlib=1.2.13
 - pip:
   - PyMuPDF==1.23.21
+  - databricks-cli < 0.100
   - databricks-connect
   - milvus==2.3.5
   - pymilvus==2.3.6
