--- a/morpheus/_lib/doca/CMakeLists.txt
+++ b/morpheus/_lib/doca/CMakeLists.txt
@@ -25,8 +25,10 @@ add_library(morpheus_doca
   src/doca_rx_pipe.cpp
   src/doca_rx_queue.cpp
   src/doca_semaphore.cpp
-  src/doca_source_kernels.cu
+  src/doca_source_kernel.cu
   src/doca_source.cpp
+  src/doca_convert_kernel.cu
+  src/doca_convert.cpp
   src/rte_context.cpp
 )
 
