--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -56,7 +56,7 @@ dependencies:
 - librdkafka>=1.9.2,<1.10.0a0
 - libtool
 - libwebp=1.3.2
-- mlflow=2.9.2
+- mlflow>=2.10.0,<3
 - mrc=24.03
 - myst-parser=0.18.1
 - nbsphinx
