--- a/conda/environments/runtime_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/runtime_cuda-121_arch-x86_64.yaml
@@ -16,7 +16,7 @@ dependencies:
 - elasticsearch==8.9.0
 - feedparser=6.0.10
 - grpcio=1.59
-- mlflow=2.9.2
+- mlflow>=2.10.0,<3
 - networkx=2.8.8
 - numpydoc=1.5
 - nvtabular=23.08.00
