Fetch tags when performing documentation builds locally and in CI, allows for the version number to appear propperly in the generated documentation

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -180,6 +180,7 @@ jobs:
         with:
           lfs: false
           path: 'morpheus'
+          fetch-tags: true
 
       - name: Get AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v1-node16
