--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -85,6 +85,7 @@ jobs:
           lfs: false
           path: 'morpheus'
           fetch-depth: 0
+          submodules: 'recursive'
 
       - name: Get AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v1-node16
@@ -115,6 +116,7 @@ jobs:
         with:
           lfs: false
           path: 'morpheus'
+          submodules: 'recursive'
 
       - name: Get AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v1-node16
@@ -149,6 +151,7 @@ jobs:
         with:
           lfs: false
           path: 'morpheus'
+          submodules: 'recursive'
 
       - name: Get AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v1-node16
@@ -181,6 +184,7 @@ jobs:
           lfs: false
           path: 'morpheus'
           fetch-tags: true
+          submodules: 'recursive'
 
       - name: Get AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v1-node16
@@ -214,6 +218,7 @@ jobs:
           lfs: false
           path: 'morpheus'
           fetch-depth: 0
+          submodules: 'recursive'
 
       - name: Get AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v1-node16
