Dcoument why we fetch tags for the documentation stage

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -183,6 +183,7 @@ jobs:
         with:
           lfs: false
           path: 'morpheus'
+          # Fetch tags so that documentation builds for releases will report the version number correctly
           fetch-tags: true
           submodules: 'recursive'
 
